syntax = "proto3";
package poset;

enum Trilean {
  UNDEFINED = 0;
  TRUE = 1;
  FALSE = 2;
}

message RoundEvent {
  bool Consensus = 1;
  bool Clotho = 2;
  Trilean Atropos = 3;
  int64 RoundReceived = 4;
}

message RoundCreatedMessage {
  map<string, RoundEvent> Events = 1;
  bool queued = 2;
}

message RoundReceived { repeated bytes Rounds = 1; }